# plc-mcp

./: ExampleClass.cs  PROJECT_STRUCTURE.md  Program.cs  README.md  appsettings.json  pyproject.toml  run.bat  temp_variables_example.py  tia-openness.sln
MyFirstApp/: ConfigTest.cs  DeviceTest.cs  DeviceTest.cs_  Program.cs  ServoTest.cs  cs-caller.py  publish.bat  run.bat
MyFirstApp/publish/: README.txt
docs/: article-chinese.md  article-english.md
exports/: BLOCK_4 copy.xml  BLOCK_4.xml
extensions/: LICENSE  package-lock.json  package.json  scl-runner-0.0.1.vsix  tsconfig.json
extensions/src/: extension.ts
mcp_server/: ServoDeviceCreator._cs  ServoTest._cs  mcp_server.csproj  ngrok.md
mcp_server/Config/: AppConfig.cs
mcp_server_release/: Program.cs  ngrok.md
mcp_server_release/tools/: EchoTool.cs
plc_tool/: README.md  pyproject.toml  server.py
plc_tool/src/plc_tool/: __init__.py  block_1.scl  compile_scl_func.py  demo.py  demo_1.py  export_project.py  openness.py  plc_program_loader.py  project.py  server.py  server_1.py  sim_device.py
plc_tool/src/plc_tool/scl/: Main.scl  fb_example.st  fb_motor_control.st  fb_pid_control.st  temperature_control.st
scl/PLC_1/: GlobalData_2.scl
scl_coding/: CPUCreator.cs  DeviceCreator.cs_  MyFirstApp.csproj  Program.cs  README.md  SclToXmlConverter.cs  ServoDeviceCreator.cs  ServoTest.cs  config.txt
scl_coding/Config/: AppConfig.cs
scl_coding/publish/: config.txt
src/plc_vfs/: __init__.py  core.py
web/: config.txt  mcp_server.cs  plc_tool.cs  scl_web_server.cs  web.csproj
web/Config/: AppConfig.cs
(+8 files in other folders)
